Swagger addings and edits
