# controllers/login.js
@@ -5,7 +5,7 @@ const User = require('../models/user')
 
 loginRouter.post('/', async (request, response) => {
   /*
-    #swagger.tags = ['Login]
+    #swagger.tags = ['Login']
     #swagger.description = 'Endpoint to sign in a specific user.'
   */
   const { email, password } = request.body
