# controllers/users.js
@@ -6,7 +6,7 @@ const auth = require('../utils/auth')
 
 usersRouter.post('/', async (request, response) => {
   /*
-  #swagger.tags = ['User']
+  #swagger.tags = ['Register']
   #swagger.description = 'Create new user'
   */
   const { email, name, password, group } = request.body
@@ -31,6 +31,7 @@ usersRouter.get('/',auth, async (request, response) => {
   /*
   #swagger.tags = ['Admin']
   #swagger.description = 'Get all users'
+  #swagger.security = [{"bearerAuth": []}]
   */
   if (request.decodedToken.role == 'admin'){
     const users = await User
@@ -46,6 +47,7 @@ usersRouter.get('/user',auth, async (request, response) => {
   /*
   #swagger.tags = ['User']
   #swagger.description = 'Get user'
+  #swagger.security = [{"bearerAuth": []}]
   */
   const user = await User.findById(request.decodedToken.id).populate('ips', { ip: 1, desc: 1, expirationDate: 1, createdAt: 1 })
   if (user) {
@@ -60,6 +62,7 @@ usersRouter.delete('/:id',auth, async (request, response) => {
   /*
   #swagger.tags = ['Admin']
   #swagger.description = 'Delete user and ip addresses belong to it'
+  #swagger.security = [{"bearerAuth": []}]
   */
   const decodedToken = request.decodedToken
   if (decodedToken.role !== 'admin') {
